; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_main.c_legacy_test_cleanup.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_main.c_legacy_test_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.testcase_t = type { i32 }

@pair = common dso_local global i32* null, align 8
@global_base = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.testcase_t*, i8*)* @legacy_test_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @legacy_test_cleanup(%struct.testcase_t* %0, i8* %1) #0 {
  %3 = alloca %struct.testcase_t*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store %struct.testcase_t* %0, %struct.testcase_t** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.testcase_t*, %struct.testcase_t** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @basic_test_cleanup(%struct.testcase_t* %6, i8* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32*, i32** @pair, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  store i32 -1, i32* %10, align 4
  %11 = load i32*, i32** @pair, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  store i32 -1, i32* %12, align 4
  store i32* null, i32** @global_base, align 8
  %13 = load i32, i32* %5, align 4
  ret i32 %13
}

declare dso_local i32 @basic_test_cleanup(%struct.testcase_t*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
